k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-umg-assistance-registry-backend
spec:
  replicas: 1        # Iniciar con 1 copia de la aplicación; aumentar para alta disponibilidad.
  selector:
    matchLabels:
      app: umg-assistance-registry-backend   # Debe coincidir con las etiquetas en la plantilla del Pod a continuación.
  template:
    metadata:
      labels:
        app: umg-assistance-registry-backend
    spec:
      containers:
        - name: backend
          # Imagen de la aplicación.
          image: alanotonielgarciahernandez/umg-assistance-registry:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80

          # Variables de entorno, incluyendo valores sensibles desde el Secret.
          resources:
            requests:
              cpu: "100m"      # 0.1 núcleos de CPU mínimo.
              memory: "128Mi"
            limits:
              cpu: "500m"      # 0.5 núcleos de CPU máximo.
              memory: "256Mi"
          
          livenessProbe:
              httpGet:
                path: /health
                port: 80
              initialDelaySeconds: 15
              periodSeconds: 20
              timeoutSeconds: 5
              failureThreshold: 3
              
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
