k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ingeniumbpo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: ingeniumbpo.com
      http:
        paths:
        - backend:
            service:
              name: svc-umg-assistance-registry-backend
              port:
                number: 80
          path: /
          pathType: Prefix
    - host: www.ingeniumbpo.com
      http:
        paths:
        - backend:
            service:
              name: svc-umg-assistance-registry-backend
              port:
                number: 80
          path: /
          pathType: Prefix

  tls:
  - hosts:
    - ingeniumbpo.com
    - www.ingeniumbpo.com
    secretName: cert-ingeniumbpo-tls
